<resources>
    <string name="app_name">Game Delivery</string>

    <string name="signed_in">Signed in!</string>
    <string name="signed_out">Signed out!</string>
    <string name="signed_cancelled">Signed in cancelled</string>
    <string name="logout_button">Logout</string>
    <string name="deliveryTitle">Introduzca los datos de la entrega:</string>
    <string name="productName">Nombre del juego</string>

    <string name="country1">España</string>
    <string name="country2">Portugal</string>
    <string name="country3">France</string>
    <string name="country4">Italia</string>

    <string name="textDate">Fecha de entrega</string>
    <string name="delivery_button">Enviar</string>

    <string name="deliveryEmptyToast">Debe rellenar todos los campos</string>
    <string name="deliverySuccessToast">Entrega registrada</string>

    <string name="countryNotExistToast">El país seleccionado no se ha encontrado</string>
    <string name="flagImageNotSavedToast">Imagen no guardada en Storage</string>
    <string name="flagImageSavedToast">Imagen guardada en Storage</string>


</resources>
