<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hello World!"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/fui_bgEmail"
            android:textColor="@android:color/white"
            android:layout_marginLeft="200dp"
            android:text="@string/logout_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

    </LinearLayout>

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/ScrollView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="vertical">


        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deliveryTitle"
                android:textSize="10pt"
                android:layout_marginTop="10dp">
            </TextView>

            <EditText
                android:id="@+id/editTextName"
                android:layout_height="wrap_content"
                android:hint="@string/productName"
                android:inputType="textPersonName"
                android:layout_width="fill_parent"
                android:layout_marginTop="10dp">
            </EditText>

            <EditText
                android:id="@+id/editTextDate"
                android:layout_height="wrap_content"
                android:hint="@string/textDate"
                android:inputType="textPersonName"
                android:layout_width="fill_parent"
                android:layout_marginTop="10dp">
            </EditText>

            <Spinner
                android:id="@+id/spinnerCountry"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:entries="@array/countryArray"
                android:layout_marginTop="10dp">
            </Spinner>

            <ImageView
                android:id="@+id/flagCountryIV"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"/>

            <Button
                android:id="@+id/deliveryButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:background="@color/fui_bgFacebook"
                android:textColor="@android:color/white"
                android:text="@string/delivery_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"/>

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>